// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser:anonymous-function 1`] = `
{
  "args": [],
  "end": {
    "column": 8,
    "index": 7,
    "line": 1,
  },
  "return": {
    "end": {
      "column": 8,
      "index": 7,
      "line": 1,
    },
    "start": {
      "column": 7,
      "index": 6,
      "line": 1,
    },
    "type": "literal",
    "value": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "anonymous_function",
}
`;

exports[`parser:anonymous-function 2`] = `
{
  "args": [],
  "end": {
    "column": 15,
    "index": 14,
    "line": 1,
  },
  "return": {
    "end": {
      "column": 15,
      "index": 14,
      "line": 1,
    },
    "start": {
      "column": 7,
      "index": 6,
      "line": 1,
    },
    "type": "string",
    "value": "string",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "anonymous_function",
}
`;

exports[`parser:anonymous-function 3`] = `
{
  "args": [
    {
      "end": {
        "column": 3,
        "index": 2,
        "line": 1,
      },
      "name": "a",
      "start": {
        "column": 2,
        "index": 1,
        "line": 1,
      },
      "type": "variable",
    },
  ],
  "end": {
    "column": 25,
    "index": 24,
    "line": 1,
  },
  "return": {
    "body": [
      {
        "end": {
          "column": 14,
          "index": 13,
          "line": 1,
        },
        "host": {
          "end": {
            "column": 12,
            "index": 11,
            "line": 1,
          },
          "name": "a",
          "start": {
            "column": 11,
            "index": 10,
            "line": 1,
          },
          "type": "variable",
        },
        "key": {
          "end": {
            "column": 14,
            "index": 13,
            "line": 1,
          },
          "name": "a",
          "start": {
            "column": 13,
            "index": 12,
            "line": 1,
          },
          "type": "identifier",
        },
        "start": {
          "column": 11,
          "index": 10,
          "line": 1,
        },
        "type": "getter",
      },
      {
        "end": {
          "column": 18,
          "index": 17,
          "line": 1,
        },
        "start": {
          "column": 15,
          "index": 14,
          "line": 1,
        },
        "type": "template_raw",
        "value": "---",
      },
      {
        "end": {
          "column": 23,
          "index": 22,
          "line": 1,
        },
        "host": {
          "end": {
            "column": 21,
            "index": 20,
            "line": 1,
          },
          "name": "a",
          "start": {
            "column": 20,
            "index": 19,
            "line": 1,
          },
          "type": "variable",
        },
        "key": {
          "end": {
            "column": 23,
            "index": 22,
            "line": 1,
          },
          "name": "b",
          "start": {
            "column": 22,
            "index": 21,
            "line": 1,
          },
          "type": "identifier",
        },
        "start": {
          "column": 20,
          "index": 19,
          "line": 1,
        },
        "type": "getter",
      },
    ],
    "end": {
      "column": 25,
      "index": 24,
      "line": 1,
    },
    "start": {
      "column": 8,
      "index": 7,
      "line": 1,
    },
    "type": "template",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "anonymous_function",
}
`;

exports[`parser:array-literall 1`] = `
{
  "end": {
    "column": 21,
    "index": 20,
    "line": 1,
  },
  "members": [
    {
      "end": {
        "column": 3,
        "index": 2,
        "line": 1,
      },
      "name": "a",
      "start": {
        "column": 2,
        "index": 1,
        "line": 1,
      },
      "type": "variable",
    },
    {
      "end": {
        "column": 6,
        "index": 5,
        "line": 1,
      },
      "name": "b",
      "start": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
      "type": "variable",
    },
    {
      "end": {
        "column": 9,
        "index": 8,
        "line": 1,
      },
      "start": {
        "column": 8,
        "index": 7,
        "line": 1,
      },
      "type": "literal",
      "value": 1,
    },
    {
      "end": {
        "column": 12,
        "index": 11,
        "line": 1,
      },
      "start": {
        "column": 11,
        "index": 10,
        "line": 1,
      },
      "type": "literal",
      "value": 2,
    },
    {
      "end": {
        "column": 20,
        "index": 19,
        "line": 1,
      },
      "members": [
        {
          "key": {
            "end": {
              "column": 16,
              "index": 15,
              "line": 1,
            },
            "name": "a",
            "start": {
              "column": 15,
              "index": 14,
              "line": 1,
            },
            "type": "identifier",
          },
          "value": {
            "end": {
              "column": 19,
              "index": 18,
              "line": 1,
            },
            "start": {
              "column": 18,
              "index": 17,
              "line": 1,
            },
            "type": "literal",
            "value": 1,
          },
        },
      ],
      "start": {
        "column": 14,
        "index": 13,
        "line": 1,
      },
      "type": "object",
    },
  ],
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "array",
}
`;

exports[`parser:binary-expression 1`] = `
{
  "end": {
    "column": 12,
    "index": 11,
    "line": 1,
  },
  "left": {
    "end": {
      "column": 7,
      "index": 6,
      "line": 1,
    },
    "left": {
      "end": {
        "column": 2,
        "index": 1,
        "line": 1,
      },
      "name": "a",
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "variable",
    },
    "op": "&&",
    "right": {
      "end": {
        "column": 7,
        "index": 6,
        "line": 1,
      },
      "name": "b",
      "start": {
        "column": 6,
        "index": 5,
        "line": 1,
      },
      "type": "variable",
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "and",
  },
  "op": "&&",
  "right": {
    "end": {
      "column": 12,
      "index": 11,
      "line": 1,
    },
    "name": "c",
    "start": {
      "column": 11,
      "index": 10,
      "line": 1,
    },
    "type": "variable",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "and",
}
`;

exports[`parser:binary-expression 2`] = `
{
  "end": {
    "column": 12,
    "index": 11,
    "line": 1,
  },
  "left": {
    "end": {
      "column": 7,
      "index": 6,
      "line": 1,
    },
    "left": {
      "end": {
        "column": 2,
        "index": 1,
        "line": 1,
      },
      "name": "a",
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "variable",
    },
    "op": "&&",
    "right": {
      "end": {
        "column": 7,
        "index": 6,
        "line": 1,
      },
      "name": "b",
      "start": {
        "column": 6,
        "index": 5,
        "line": 1,
      },
      "type": "variable",
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "and",
  },
  "op": "||",
  "right": {
    "end": {
      "column": 12,
      "index": 11,
      "line": 1,
    },
    "name": "c",
    "start": {
      "column": 11,
      "index": 10,
      "line": 1,
    },
    "type": "variable",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "or",
}
`;

exports[`parser:binary-expression 3`] = `
{
  "end": {
    "column": 12,
    "index": 11,
    "line": 1,
  },
  "left": {
    "end": {
      "column": 2,
      "index": 1,
      "line": 1,
    },
    "name": "a",
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "variable",
  },
  "op": "||",
  "right": {
    "end": {
      "column": 12,
      "index": 11,
      "line": 1,
    },
    "left": {
      "end": {
        "column": 7,
        "index": 6,
        "line": 1,
      },
      "name": "b",
      "start": {
        "column": 6,
        "index": 5,
        "line": 1,
      },
      "type": "variable",
    },
    "op": "&&",
    "right": {
      "end": {
        "column": 12,
        "index": 11,
        "line": 1,
      },
      "name": "c",
      "start": {
        "column": 11,
        "index": 10,
        "line": 1,
      },
      "type": "variable",
    },
    "start": {
      "column": 6,
      "index": 5,
      "line": 1,
    },
    "type": "and",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "or",
}
`;

exports[`parser:binary-expression 4`] = `
{
  "end": {
    "column": 14,
    "index": 13,
    "line": 1,
  },
  "left": {
    "end": {
      "column": 8,
      "index": 7,
      "line": 1,
    },
    "left": {
      "end": {
        "column": 2,
        "index": 1,
        "line": 1,
      },
      "name": "a",
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "variable",
    },
    "op": "!==",
    "right": {
      "end": {
        "column": 8,
        "index": 7,
        "line": 1,
      },
      "name": "b",
      "start": {
        "column": 7,
        "index": 6,
        "line": 1,
      },
      "type": "variable",
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "strneq",
  },
  "op": "===",
  "right": {
    "end": {
      "column": 14,
      "index": 13,
      "line": 1,
    },
    "name": "c",
    "start": {
      "column": 13,
      "index": 12,
      "line": 1,
    },
    "type": "variable",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "streq",
}
`;

exports[`parser:complex 1`] = `
{
  "body": [
    {
      "end": {
        "column": 13,
        "index": 12,
        "line": 1,
      },
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "raw",
      "value": "raw content ",
    },
    {
      "body": {
        "body": [
          {
            "end": {
              "column": 28,
              "index": 27,
              "line": 1,
            },
            "start": {
              "column": 16,
              "index": 15,
              "line": 1,
            },
            "type": "template_raw",
            "value": "es tempalte ",
          },
          {
            "body": [
              {
                "end": {
                  "column": 37,
                  "index": 36,
                  "line": 1,
                },
                "start": {
                  "column": 31,
                  "index": 30,
                  "line": 1,
                },
                "type": "template_raw",
                "value": "deeper",
              },
              {
                "end": {
                  "column": 44,
                  "index": 43,
                  "line": 1,
                },
                "left": {
                  "end": {
                    "column": 40,
                    "index": 39,
                    "line": 1,
                  },
                  "name": "a",
                  "start": {
                    "column": 39,
                    "index": 38,
                    "line": 1,
                  },
                  "type": "variable",
                },
                "op": "+",
                "right": {
                  "end": {
                    "column": 44,
                    "index": 43,
                    "line": 1,
                  },
                  "start": {
                    "column": 43,
                    "index": 42,
                    "line": 1,
                  },
                  "type": "literal",
                  "value": 3,
                },
                "start": {
                  "column": 39,
                  "index": 38,
                  "line": 1,
                },
                "type": "add",
              },
            ],
            "end": {
              "column": 46,
              "index": 45,
              "line": 1,
            },
            "start": {
              "column": 30,
              "index": 29,
              "line": 1,
            },
            "type": "template",
          },
        ],
        "end": {
          "column": 48,
          "index": 47,
          "line": 1,
        },
        "start": {
          "column": 15,
          "index": 14,
          "line": 1,
        },
        "type": "template",
      },
      "end": {
        "column": 49,
        "index": 48,
        "line": 1,
      },
      "start": {
        "column": 13,
        "index": 12,
        "line": 1,
      },
      "type": "script",
    },
  ],
  "end": {
    "column": 49,
    "index": 48,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "document",
}
`;

exports[`parser:conditional 1`] = `
{
  "alternate": {
    "end": {
      "column": 10,
      "index": 9,
      "line": 1,
    },
    "name": "c",
    "start": {
      "column": 9,
      "index": 8,
      "line": 1,
    },
    "type": "variable",
  },
  "consequent": {
    "end": {
      "column": 6,
      "index": 5,
      "line": 1,
    },
    "name": "b",
    "start": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
    "type": "variable",
  },
  "end": {
    "column": 10,
    "index": 9,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "test": {
    "end": {
      "column": 2,
      "index": 1,
      "line": 1,
    },
    "name": "a",
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "variable",
  },
  "type": "conditional",
}
`;

exports[`parser:evalMode 1`] = `
{
  "end": {
    "column": 6,
    "index": 5,
    "line": 1,
  },
  "left": {
    "end": {
      "column": 2,
      "index": 1,
      "line": 1,
    },
    "name": "a",
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "variable",
  },
  "op": "+",
  "right": {
    "end": {
      "column": 6,
      "index": 5,
      "line": 1,
    },
    "name": "b",
    "start": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
    "type": "variable",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "add",
}
`;

exports[`parser:filter 1`] = `
{
  "body": [
    {
      "end": {
        "column": 10,
        "index": 9,
        "line": 1,
      },
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "raw",
      "value": "$abc is ",
    },
    {
      "body": {
        "end": undefined,
        "filters": [
          {
            "args": [],
            "name": "html",
          },
        ],
        "input": {
          "end": {
            "column": 15,
            "index": 14,
            "line": 1,
          },
          "name": "abc",
          "start": {
            "column": 12,
            "index": 11,
            "line": 1,
          },
          "type": "variable",
        },
        "start": {
          "column": 12,
          "index": 11,
          "line": 1,
        },
        "type": "filter",
      },
      "end": {
        "column": 23,
        "index": 22,
        "line": 1,
      },
      "start": {
        "column": 10,
        "index": 9,
        "line": 1,
      },
      "type": "script",
    },
  ],
  "end": {
    "column": 23,
    "index": 22,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "document",
}
`;

exports[`parser:filter-escape 1`] = `
{
  "body": [
    {
      "end": {
        "column": 10,
        "index": 9,
        "line": 1,
      },
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "raw",
      "value": "$abc is ",
    },
    {
      "body": {
        "end": undefined,
        "filters": [
          {
            "args": [
              "YYYY-MM-DD HH:mm:ss",
            ],
            "name": "date",
          },
        ],
        "input": {
          "end": {
            "column": 15,
            "index": 14,
            "line": 1,
          },
          "name": "abc",
          "start": {
            "column": 12,
            "index": 11,
            "line": 1,
          },
          "type": "variable",
        },
        "start": {
          "column": 12,
          "index": 11,
          "line": 1,
        },
        "type": "filter",
      },
      "end": {
        "column": 46,
        "index": 45,
        "line": 1,
      },
      "start": {
        "column": 10,
        "index": 9,
        "line": 1,
      },
      "type": "script",
    },
  ],
  "end": {
    "column": 46,
    "index": 45,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "document",
}
`;

exports[`parser:functionCall 1`] = `
{
  "args": [
    {
      "end": {
        "column": 11,
        "index": 10,
        "line": 1,
      },
      "name": "a",
      "start": {
        "column": 10,
        "index": 9,
        "line": 1,
      },
      "type": "variable",
    },
    {
      "args": [
        {
          "end": {
            "column": 23,
            "index": 22,
            "line": 1,
          },
          "name": "b",
          "start": {
            "column": 22,
            "index": 21,
            "line": 1,
          },
          "type": "variable",
        },
      ],
      "end": {
        "column": 24,
        "index": 23,
        "line": 1,
      },
      "identifier": "doAction",
      "start": {
        "column": 13,
        "index": 12,
        "line": 1,
      },
      "type": "func_call",
    },
  ],
  "end": {
    "column": 25,
    "index": 24,
    "line": 1,
  },
  "identifier": "doAction",
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "func_call",
}
`;

exports[`parser:group-expression 1`] = `
{
  "end": {
    "column": 13,
    "index": 12,
    "line": 1,
  },
  "left": {
    "end": {
      "column": 2,
      "index": 1,
      "line": 1,
    },
    "name": "a",
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "variable",
  },
  "op": "&&",
  "right": {
    "end": {
      "column": 13,
      "index": 12,
      "line": 1,
    },
    "left": {
      "end": {
        "column": 8,
        "index": 7,
        "line": 1,
      },
      "name": "b",
      "start": {
        "column": 7,
        "index": 6,
        "line": 1,
      },
      "type": "variable",
    },
    "op": "&&",
    "right": {
      "end": {
        "column": 13,
        "index": 12,
        "line": 1,
      },
      "name": "c",
      "start": {
        "column": 12,
        "index": 11,
        "line": 1,
      },
      "type": "variable",
    },
    "start": {
      "column": 7,
      "index": 6,
      "line": 1,
    },
    "type": "and",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "and",
}
`;

exports[`parser:multi-expression 1`] = `
{
  "body": [
    {
      "end": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 3,
          "index": 2,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 2,
          "index": 1,
          "line": 1,
        },
        "type": "variable",
      },
      "key": {
        "end": {
          "column": 5,
          "index": 4,
          "line": 1,
        },
        "name": "b",
        "start": {
          "column": 4,
          "index": 3,
          "line": 1,
        },
        "type": "identifier",
      },
      "start": {
        "column": 2,
        "index": 1,
        "line": 1,
      },
      "type": "getter",
    },
    {
      "end": {
        "column": 10,
        "index": 9,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 8,
          "index": 7,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 7,
          "index": 6,
          "line": 1,
        },
        "type": "variable",
      },
      "key": {
        "end": {
          "column": 10,
          "index": 9,
          "line": 1,
        },
        "name": "b",
        "start": {
          "column": 9,
          "index": 8,
          "line": 1,
        },
        "type": "variable",
      },
      "start": {
        "column": 7,
        "index": 6,
        "line": 1,
      },
      "type": "getter",
    },
    {
      "end": {
        "column": 18,
        "index": 17,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 14,
          "index": 13,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 13,
          "index": 12,
          "line": 1,
        },
        "type": "variable",
      },
      "key": {
        "end": {
          "column": 18,
          "index": 17,
          "line": 1,
        },
        "start": {
          "column": 15,
          "index": 14,
          "line": 1,
        },
        "type": "string",
        "value": "c",
      },
      "start": {
        "column": 13,
        "index": 12,
        "line": 1,
      },
      "type": "getter",
    },
    {
      "end": {
        "column": 26,
        "index": 25,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 22,
          "index": 21,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 21,
          "index": 20,
          "line": 1,
        },
        "type": "variable",
      },
      "key": {
        "body": [
          {
            "end": {
              "column": 25,
              "index": 24,
              "line": 1,
            },
            "start": {
              "column": 24,
              "index": 23,
              "line": 1,
            },
            "type": "template_raw",
            "value": "d",
          },
        ],
        "end": {
          "column": 26,
          "index": 25,
          "line": 1,
        },
        "start": {
          "column": 23,
          "index": 22,
          "line": 1,
        },
        "type": "template",
      },
      "start": {
        "column": 21,
        "index": 20,
        "line": 1,
      },
      "type": "getter",
    },
  ],
  "end": {
    "column": 28,
    "index": 27,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "expression-list",
}
`;

exports[`parser:number 1`] = `
{
  "end": {
    "column": 13,
    "index": 12,
    "line": 1,
  },
  "left": {
    "end": {
      "column": 9,
      "index": 8,
      "line": 1,
    },
    "left": {
      "end": {
        "column": 2,
        "index": 1,
        "line": 1,
      },
      "op": "-",
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "unary",
      "value": {
        "end": {
          "column": 3,
          "index": 2,
          "line": 1,
        },
        "start": {
          "column": 2,
          "index": 1,
          "line": 1,
        },
        "type": "literal",
        "value": 1,
      },
    },
    "op": "+",
    "right": {
      "end": {
        "column": 9,
        "index": 8,
        "line": 1,
      },
      "start": {
        "column": 6,
        "index": 5,
        "line": 1,
      },
      "type": "literal",
      "value": 2.5,
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "add",
  },
  "op": "+",
  "right": {
    "end": {
      "column": 13,
      "index": 12,
      "line": 1,
    },
    "start": {
      "column": 12,
      "index": 11,
      "line": 1,
    },
    "type": "literal",
    "value": 3,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "add",
}
`;

exports[`parser:object-literall 1`] = `
{
  "end": {
    "column": 32,
    "index": 31,
    "line": 1,
  },
  "members": [
    {
      "key": {
        "end": {
          "column": 3,
          "index": 2,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 2,
          "index": 1,
          "line": 1,
        },
        "type": "identifier",
      },
      "value": {
        "end": {
          "column": 6,
          "index": 5,
          "line": 1,
        },
        "start": {
          "column": 5,
          "index": 4,
          "line": 1,
        },
        "type": "literal",
        "value": 1,
      },
    },
    {
      "key": {
        "end": {
          "column": 11,
          "index": 10,
          "line": 1,
        },
        "start": {
          "column": 8,
          "index": 7,
          "line": 1,
        },
        "type": "string",
        "value": "b",
      },
      "value": {
        "end": {
          "column": 14,
          "index": 13,
          "line": 1,
        },
        "start": {
          "column": 13,
          "index": 12,
          "line": 1,
        },
        "type": "literal",
        "value": 2,
      },
    },
    {
      "key": {
        "body": [
          {
            "end": {
              "column": 19,
              "index": 18,
              "line": 1,
            },
            "start": {
              "column": 18,
              "index": 17,
              "line": 1,
            },
            "type": "template_raw",
            "value": "c",
          },
        ],
        "end": {
          "column": 20,
          "index": 19,
          "line": 1,
        },
        "start": {
          "column": 17,
          "index": 16,
          "line": 1,
        },
        "type": "template",
      },
      "value": {
        "end": {
          "column": 24,
          "index": 23,
          "line": 1,
        },
        "start": {
          "column": 23,
          "index": 22,
          "line": 1,
        },
        "type": "literal",
        "value": 3,
      },
    },
    {
      "key": {
        "end": {
          "column": 27,
          "index": 26,
          "line": 1,
        },
        "name": "d",
        "start": {
          "column": 26,
          "index": 25,
          "line": 1,
        },
        "type": "identifier",
      },
      "value": {
        "end": {
          "column": 31,
          "index": 30,
          "line": 1,
        },
        "members": [],
        "start": {
          "column": 29,
          "index": 28,
          "line": 1,
        },
        "type": "object",
      },
    },
  ],
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "object",
}
`;

exports[`parser:simple 1`] = `
{
  "body": [
    {
      "end": {
        "column": 22,
        "index": 21,
        "line": 1,
      },
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "raw",
      "value": "expression result is ",
    },
    {
      "body": {
        "end": {
          "column": 29,
          "index": 28,
          "line": 1,
        },
        "left": {
          "end": {
            "column": 25,
            "index": 24,
            "line": 1,
          },
          "name": "a",
          "start": {
            "column": 24,
            "index": 23,
            "line": 1,
          },
          "type": "variable",
        },
        "op": "+",
        "right": {
          "end": {
            "column": 29,
            "index": 28,
            "line": 1,
          },
          "name": "b",
          "start": {
            "column": 28,
            "index": 27,
            "line": 1,
          },
          "type": "variable",
        },
        "start": {
          "column": 24,
          "index": 23,
          "line": 1,
        },
        "type": "add",
      },
      "end": {
        "column": 30,
        "index": 29,
        "line": 1,
      },
      "start": {
        "column": 22,
        "index": 21,
        "line": 1,
      },
      "type": "script",
    },
  ],
  "end": {
    "column": 30,
    "index": 29,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "document",
}
`;

exports[`parser:single-string 1`] = `
{
  "end": {
    "column": 9,
    "index": 8,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "string",
  "value": "string",
}
`;

exports[`parser:string 1`] = `
{
  "end": {
    "column": 29,
    "index": 28,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "string",
  "value": "string literall, escape "",
}
`;

exports[`parser:template 1`] = `
{
  "body": [
    {
      "end": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
      "start": {
        "column": 2,
        "index": 1,
        "line": 1,
      },
      "type": "template_raw",
      "value": "abc",
    },
    {
      "end": {
        "column": 12,
        "index": 11,
        "line": 1,
      },
      "left": {
        "end": {
          "column": 8,
          "index": 7,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 7,
          "index": 6,
          "line": 1,
        },
        "type": "variable",
      },
      "op": "+",
      "right": {
        "end": {
          "column": 12,
          "index": 11,
          "line": 1,
        },
        "name": "b",
        "start": {
          "column": 11,
          "index": 10,
          "line": 1,
        },
        "type": "variable",
      },
      "start": {
        "column": 7,
        "index": 6,
        "line": 1,
      },
      "type": "add",
    },
  ],
  "end": {
    "column": 14,
    "index": 13,
    "line": 1,
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "template",
}
`;

exports[`parser:unary-expression 1`] = `
{
  "end": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "op": "!",
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "unary",
  "value": {
    "end": {
      "column": 3,
      "index": 2,
      "line": 1,
    },
    "op": "!",
    "start": {
      "column": 2,
      "index": 1,
      "line": 1,
    },
    "type": "unary",
    "value": {
      "end": {
        "column": 4,
        "index": 3,
        "line": 1,
      },
      "name": "a",
      "start": {
        "column": 3,
        "index": 2,
        "line": 1,
      },
      "type": "variable",
    },
  },
}
`;

exports[`parser:variable-geter 1`] = `
{
  "args": [
    {
      "end": {
        "column": 13,
        "index": 12,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 11,
          "index": 10,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 10,
          "index": 9,
          "line": 1,
        },
        "type": "variable",
      },
      "key": {
        "end": {
          "column": 13,
          "index": 12,
          "line": 1,
        },
        "name": "b",
        "start": {
          "column": 12,
          "index": 11,
          "line": 1,
        },
        "type": "identifier",
      },
      "start": {
        "column": 10,
        "index": 9,
        "line": 1,
      },
      "type": "getter",
    },
    {
      "end": {
        "column": 18,
        "index": 17,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 16,
          "index": 15,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 15,
          "index": 14,
          "line": 1,
        },
        "type": "variable",
      },
      "key": {
        "end": {
          "column": 18,
          "index": 17,
          "line": 1,
        },
        "name": "b",
        "start": {
          "column": 17,
          "index": 16,
          "line": 1,
        },
        "type": "variable",
      },
      "start": {
        "column": 15,
        "index": 14,
        "line": 1,
      },
      "type": "getter",
    },
    {
      "end": {
        "column": 26,
        "index": 25,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 22,
          "index": 21,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 21,
          "index": 20,
          "line": 1,
        },
        "type": "variable",
      },
      "key": {
        "end": {
          "column": 26,
          "index": 25,
          "line": 1,
        },
        "start": {
          "column": 23,
          "index": 22,
          "line": 1,
        },
        "type": "string",
        "value": "c",
      },
      "start": {
        "column": 21,
        "index": 20,
        "line": 1,
      },
      "type": "getter",
    },
    {
      "end": {
        "column": 34,
        "index": 33,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 30,
          "index": 29,
          "line": 1,
        },
        "name": "a",
        "start": {
          "column": 29,
          "index": 28,
          "line": 1,
        },
        "type": "variable",
      },
      "key": {
        "body": [
          {
            "end": {
              "column": 33,
              "index": 32,
              "line": 1,
            },
            "start": {
              "column": 32,
              "index": 31,
              "line": 1,
            },
            "type": "template_raw",
            "value": "d",
          },
        ],
        "end": {
          "column": 34,
          "index": 33,
          "line": 1,
        },
        "start": {
          "column": 31,
          "index": 30,
          "line": 1,
        },
        "type": "template",
      },
      "start": {
        "column": 29,
        "index": 28,
        "line": 1,
      },
      "type": "getter",
    },
  ],
  "end": {
    "column": 36,
    "index": 35,
    "line": 1,
  },
  "identifier": "doAction",
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "func_call",
}
`;

exports[`parser:variable-geter2 1`] = `
{
  "end": {
    "column": 17,
    "index": 16,
    "line": 1,
  },
  "host": {
    "end": {
      "column": 12,
      "index": 11,
      "line": 1,
    },
    "host": {
      "end": {
        "column": 9,
        "index": 8,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 4,
          "index": 3,
          "line": 1,
        },
        "host": {
          "end": {
            "column": 2,
            "index": 1,
            "line": 1,
          },
          "name": "a",
          "start": {
            "column": 1,
            "index": 0,
            "line": 1,
          },
          "type": "variable",
        },
        "key": {
          "end": {
            "column": 4,
            "index": 3,
            "line": 1,
          },
          "name": "b",
          "start": {
            "column": 3,
            "index": 2,
            "line": 1,
          },
          "type": "variable",
        },
        "start": {
          "column": 1,
          "index": 0,
          "line": 1,
        },
        "type": "getter",
      },
      "key": {
        "end": {
          "column": 9,
          "index": 8,
          "line": 1,
        },
        "start": {
          "column": 6,
          "index": 5,
          "line": 1,
        },
        "type": "string",
        "value": "c",
      },
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "getter",
    },
    "key": {
      "end": {
        "column": 12,
        "index": 11,
        "line": 1,
      },
      "name": "d",
      "start": {
        "column": 11,
        "index": 10,
        "line": 1,
      },
      "type": "variable",
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "getter",
  },
  "key": {
    "body": [
      {
        "end": {
          "column": 16,
          "index": 15,
          "line": 1,
        },
        "start": {
          "column": 15,
          "index": 14,
          "line": 1,
        },
        "type": "template_raw",
        "value": "x",
      },
    ],
    "end": {
      "column": 17,
      "index": 16,
      "line": 1,
    },
    "start": {
      "column": 14,
      "index": 13,
      "line": 1,
    },
    "type": "template",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "getter",
}
`;

exports[`parser:variable-geter2 2`] = `
{
  "end": {
    "column": 16,
    "index": 15,
    "line": 1,
  },
  "host": {
    "end": {
      "column": 12,
      "index": 11,
      "line": 1,
    },
    "host": {
      "end": {
        "column": 9,
        "index": 8,
        "line": 1,
      },
      "host": {
        "end": {
          "column": 4,
          "index": 3,
          "line": 1,
        },
        "host": {
          "end": {
            "column": 2,
            "index": 1,
            "line": 1,
          },
          "name": "a",
          "start": {
            "column": 1,
            "index": 0,
            "line": 1,
          },
          "type": "variable",
        },
        "key": {
          "end": {
            "column": 4,
            "index": 3,
            "line": 1,
          },
          "name": "b",
          "start": {
            "column": 3,
            "index": 2,
            "line": 1,
          },
          "type": "variable",
        },
        "start": {
          "column": 1,
          "index": 0,
          "line": 1,
        },
        "type": "getter",
      },
      "key": {
        "end": {
          "column": 9,
          "index": 8,
          "line": 1,
        },
        "start": {
          "column": 6,
          "index": 5,
          "line": 1,
        },
        "type": "string",
        "value": "c",
      },
      "start": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "type": "getter",
    },
    "key": {
      "end": {
        "column": 12,
        "index": 11,
        "line": 1,
      },
      "name": "d",
      "start": {
        "column": 11,
        "index": 10,
        "line": 1,
      },
      "type": "identifier",
    },
    "start": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "getter",
  },
  "key": {
    "body": [
      {
        "end": {
          "column": 15,
          "index": 14,
          "line": 1,
        },
        "start": {
          "column": 14,
          "index": 13,
          "line": 1,
        },
        "type": "template_raw",
        "value": "x",
      },
    ],
    "end": {
      "column": 16,
      "index": 15,
      "line": 1,
    },
    "start": {
      "column": 13,
      "index": 12,
      "line": 1,
    },
    "type": "template",
  },
  "start": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "getter",
}
`;
